--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    font-family: "Arial Narrow";
+    background-color: aliceblue;
+    padding: 40px 0
+}
+
 h2 {
     font-size: 28px;
 }
@@ -13,4 +19,10 @@ span {
 img {
     width: 150px;
     height: 150px;
+}
+section, header {
+    padding: 10px 60px 20px 60px;
+    background-color: white;
+    width: 960px;
+    margin: 0 auto;
 }
