--- a/style.css
+++ b/style.css
@@ -26,3 +26,16 @@ section, header {
     width: 960px;
     margin: 0 auto;
 }
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header ul {
+    list-style: none;
+}
+
+header li {
+    margin-bottom: 15px;
+}
