--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ span {
 }
 
 img {
-    width: 150px;
-    height: 150px;
+    width: 180px;
+    height: 180px;
 }
 section, header {
     padding: 10px 60px 20px 60px;
@@ -38,4 +38,14 @@ header ul {
 
 header li {
     margin-bottom: 15px;
+}
+
+header address img {
+    width: 16px;
+    height: 16px;
+    background-color: cornflowerblue;
+    margin-right: 10px;
+    padding: 8px;
+    vertical-align: middle;
+    border-radius: 50%;
 }
