--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 body {
-    font-family: "Arial Narrow";
+    font-family: Arial, Helvetica, sans-serif;
     background-color: aliceblue;
     padding: 40px 0
-}
-
-h2 {
-    font-size: 28px;
 }
 
 h1 {
     font-size: 36px;
 }
 
+h2 {
+    font-size: 28px;
+}
+
+h3 {
+    margin-top: 5px;
+}
+
 span {
     color: gray;
 }
 
-img {
-    width: 180px;
-    height: 180px;
-}
 section, header {
     padding: 10px 60px 20px 60px;
     background-color: white;
@@ -43,7 +43,7 @@ header li {
 .address-icon {
     width: 16px;
     height: 16px;
-    background-color: cornflowerblue;
+    background-color: #2B26D1;
     margin-right: 10px;
     padding: 8px;
     vertical-align: middle;
@@ -51,4 +51,35 @@ header li {
 
 .circle {
     border-radius: 50%;
+}
+
+.profile-pictur {
+    width: 180px;
+    height: 180px;
+}
+
+.hobbies {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.hobbies li {
+    width: 50%;
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 40px;
+}
+
+.hobbies div {
+    margin-left: 20px;
+}
+
+.hobbies p {
+    color: gray;
+}
+
+p {
+    line-height: 1.5;
 }
