--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 h1 {
     font-size: 36px;
+    margin-bottom: 10px;
 }
 
 h2 {
@@ -22,22 +23,29 @@ span {
 
 section, header {
     padding: 10px 60px 20px 60px;
-    background-color: white;
-    width: 960px;
-    margin: 0 auto;
 }
+
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 60px;
 }
 
 header ul {
     list-style: none;
 }
 
-header li {
+li {
     margin-bottom: 15px;
+}
+
+.container{
+    box-shadow: 5px 5px 20px gray;
+    width: 960px;
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 30px;
 }
 
 .address-icon {
@@ -82,4 +90,31 @@ header li {
 
 p {
     line-height: 1.5;
+}
+
+.cv-download-link {
+    border: 2px solid #2B26D1;
+    color: black;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: inline-block;
+    margin-top: 30px;
+    border-radius: 26px;
+    transition: background-color 0.5s, color 0.5s;
+    box-shadow: 2px 5px 15px gray;
+}
+
+.cv-download-link:hover {
+    color: white;
+    background-color: #2B26D1;
+}
+
+.cv-download-link:focus {
+    outline: none;
+    color: white;
+    background-color: #2B26D1;
+}
+
+.cv-download-link:active {
+    text-decoration: underline;
 }
