--- a/style.css
+++ b/style.css
@@ -1,28 +1,29 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: aliceblue;
+    font-family: 'Roboto Condensed', sans-serif;
+    background-color: #d3d3d3;
     padding: 40px 0
 }
 
 h1 {
     font-size: 36px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 h2 {
     font-size: 28px;
+    margin-bottom: 3px;
 }
 
 h3 {
-    margin-top: 5px;
+    margin-top: 3px;
 }
 
 span {
-    color: gray;
+    color: rgb(89, 89, 89);
 }
 
 section, header {
-    padding: 10px 60px 20px 60px;
+    padding: 0 60px 10px 60px;
 }
 
 header {
@@ -30,6 +31,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding-top: 60px;
+    padding-bottom: 30px;
 }
 
 header ul {
@@ -37,17 +39,18 @@ header ul {
 }
 
 li {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .container{
-    box-shadow: 5px 5px 20px gray;
+    box-shadow: 5px 5px 20px #2B26D1;
     width: 960px;
     margin: 0 auto;
     background-color: white;
     border-radius: 30px;
 }
 
+/*
 .address-icon {
     width: 16px;
     height: 16px;
@@ -55,6 +58,15 @@ li {
     margin-right: 10px;
     padding: 8px;
     vertical-align: middle;
+}
+*/
+
+.address-icon {
+    width: 32px;
+    height: 32px;
+    margin-right: 10px;
+    vertical-align: middle;
+    border-radius: 15%;
 }
 
 .circle {
@@ -73,6 +85,18 @@ li {
     flex-wrap: wrap;
 }
 
+.edu-language {
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.hobbies-icon {
+    width: 32px;
+    height: 32px;
+    border-radius: 15%;
+}
+
 .hobbies li {
     width: 50%;
     display: flex;
@@ -89,24 +113,38 @@ li {
 }
 
 p {
-    line-height: 1.5;
+    line-height: 1.3;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color:#2B26D1;
+}
+
+a:active {
+    text-decoration: underline;
 }
 
 .cv-download-link {
-    border: 2px solid #2B26D1;
+    /*border: 2px solid gray;*/
     color: black;
     text-decoration: none;
     padding: 10px 20px;
     display: inline-block;
     margin-top: 30px;
     border-radius: 26px;
-    transition: background-color 0.5s, color 0.5s;
-    box-shadow: 2px 5px 15px gray;
+    transition: background-color 0.5s, color 0.5s, border-color 0.5s;
+    box-shadow: 2px 2px 10px #2B26D1;
 }
 
 .cv-download-link:hover {
     color: white;
     background-color: #2B26D1;
+    /*border-color: #2B26D1;*/
 }
 
 .cv-download-link:focus {
